<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bggame"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/allScore"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_score" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:id="@+id/namePlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name_play" />

        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:id="@+id/scorePlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/score_play" />

    </LinearLayout>

    <ListView
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        tools:listitem="@layout/user_list"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <ImageView
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:id="@+id/imageView2"
        android:layout_width="243dp"
        android:layout_height="84dp"
        android:src="@drawable/btnback" />

</LinearLayout>
